@@ -26,6 +26,7 @@ Copyright : (C) 2003 Peter Deak
 
 #include <qfileinfo.h>
 #include <iostream>
+#include <QTextCodec>
 
 using namespace std;
 
@@ -59,6 +60,11 @@ int main ( int argi, char **argc ) {
 #warning ====> installing own message handler
 	qInstallMsgHandler(myMessageOutput);
 #endif
+	
+	QTextCodec::setCodecForCStrings ( QTextCodec::codecForName ( "UTF-8" ) );
+	QTextCodec::setCodecForLocale ( QTextCodec::codecForName ( "UTF-8" ) );
+	QTextCodec::setCodecForTr ( QTextCodec::codecForName ( "UTF-8" ) );
+	
 	QApplication app ( argi, argc );
 	
 	CdCatConfig *cconfig = new CdCatConfig();
